# suturo_perception

./: .gitattributes  .gitignore
boost_threadpool_test/: CMakeLists.txt  threadpool.cpp
convert_pcd_to_rgb_image/src/: CMakeLists.txt  convert_pcd_to_rgb.cpp
pcl_correspondence/: CMakeLists.txt  README
surf_object_recognition/src/: CMakeLists.txt  nndr_matcher.cpp  object_matcher.cpp  simple_matcher.cpp  surf.cpp  symmetry_nndr_matcher.cpp
suturo_perception_cloud_fitter/: CMakeLists.txt  package.xml
suturo_perception_cloud_fitter/include/: mesh_loader.h
suturo_perception_cloud_fitter/ply/: pringles.ply
suturo_perception_cloud_fitter/src/: fitter_test.cpp  mesh_loader.cpp  ply.c
suturo_perception_color_analysis/: CMakeLists.txt  package.xml
suturo_perception_color_analysis/include/: color_analysis.h
suturo_perception_color_analysis/src/: CMakeLists.txt  color_analysis.cpp
suturo_perception_color_analysis/test/: test.cpp
suturo_perception_lib/lib/: CMakeLists.txt  PerceivedObject.h  my_class.cpp  point_cloud_operations.cpp  suturo_perception.cpp  suturo_perception.h
suturo_perception_lib/perception_lib/src/: CMakeLists.txt
suturo_perception_lib/test/: CMakeLists.txt  pointcloud_path.h.in  test.cpp
suturo_perception_rosnode/: CMakeLists.txt  README  package.xml  run_bag.launch  run_gazebo.launch  run_pcd_to_pointcloud.launch  run_pr2.launch  run_pr2_bag.launch  run_sensor.launch
suturo_perception_rosnode/cfg/: SuturoPerception.cfg  SuturoPerceptionConfig.cfg
suturo_perception_rosnode/data/: README
suturo_perception_rosnode/launch/: run_bag.launch  run_gazebo.launch  run_pcd_to_pointcloud.launch  run_pr2.launch  run_pr2_bag.launch  run_sensor.launch  run_sensor_xtion.launch
suturo_perception_rosnode/src/: calc_pc_from_img_and_depth.cpp  client.cpp  dummy_node.cpp  knowledge_gen.cpp  knowledge_gen_node.cpp  main.cpp  pancake_pose.cpp  pose_estimator.cpp  roi_publisher.cpp  roi_publisher.h  segment_objects.cpp  suturo_perception_knowledge_rosnode.cpp  suturo_perception_knowledge_rosnode.h  suturo_perception_rosnode.cpp  suturo_perception_rosnode.h  visualization_publisher.cpp  visualization_publisher.h
suturo_perception_shape_detection/: CMakeLists.txt  package.xml
suturo_perception_shape_detection/include/: random_sample_consensus.h
suturo_perception_shape_detection/src/: CMakeLists.txt  random_sample_consensus.cpp
suturo_perception_svm_classification/: CMakeLists.txt  package.xml
suturo_perception_svm_classification/include/: svm_classification.h
suturo_perception_svm_classification/kaffee/: pringles_laying.pcd
suturo_perception_svm_classification/src/: CMakeLists.txt  svm_classification.cpp
suturo_perception_svm_classification/test/: test.cpp
suturo_perception_svm_classification/vfh_data/Asus-5_degrees/1/: 00000_seg_cloud.pcd_vfh  00001_seg_cloud.pcd_vfh  00002_seg_cloud.pcd_vfh  00003_seg_cloud.pcd_vfh  00004_seg_cloud.pcd_vfh  00005_seg_cloud.pcd_vfh  00006_seg_cloud.pcd_vfh  00007_seg_cloud.pcd_vfh  00008_seg_cloud.pcd_vfh  00009_seg_cloud.pcd_vfh  00010_seg_cloud.pcd_vfh  00011_seg_cloud.pcd_vfh  00012_seg_cloud.pcd_vfh  00013_seg_cloud.pcd_vfh  00014_seg_cloud.pcd_vfh  00015_seg_cloud.pcd_vfh  00016_seg_cloud.pcd_vfh  00017_seg_cloud.pcd_vfh  00018_seg_cloud.pcd_vfh  00019_seg_cloud.pcd_vfh  00020_seg_cloud.pcd_vfh  00021_seg_cloud.pcd_vfh  00022_seg_cloud.pcd_vfh  00023_seg_cloud.pcd_vfh  00024_seg_cloud.pcd_vfh  00025_seg_cloud.pcd_vfh  00026_seg_cloud.pcd_vfh  00027_seg_cloud.pcd_vfh  00028_seg_cloud.pcd_vfh  00029_seg_cloud.pcd_vfh  00030_seg_cloud.pcd_vfh  00031_seg_cloud.pcd_vfh  00032_seg_cloud.pcd_vfh  00033_seg_cloud.pcd_vfh  00034_seg_cloud.pcd_vfh  00035_seg_cloud.pcd_vfh  00036_seg_cloud.pcd_vfh  00037_seg_cloud.pcd_vfh  00038_seg_cloud.pcd_vfh  00039_seg_cloud.pcd_vfh  (+31 more)
suturo_perception_svm_classification/vfh_data/Corny_Schoko-5_degrees/1/: 00000_seg_cloud.pcd_vfh  00001_seg_cloud.pcd_vfh  00002_seg_cloud.pcd_vfh  00003_seg_cloud.pcd_vfh  00004_seg_cloud.pcd_vfh  00005_seg_cloud.pcd_vfh  00006_seg_cloud.pcd_vfh  00007_seg_cloud.pcd_vfh  00008_seg_cloud.pcd_vfh  00009_seg_cloud.pcd_vfh  00010_seg_cloud.pcd_vfh  00011_seg_cloud.pcd_vfh  00012_seg_cloud.pcd_vfh  00013_seg_cloud.pcd_vfh  00014_seg_cloud.pcd_vfh  00015_seg_cloud.pcd_vfh  00016_seg_cloud.pcd_vfh  00017_seg_cloud.pcd_vfh  00018_seg_cloud.pcd_vfh  00019_seg_cloud.pcd_vfh  00020_seg_cloud.pcd_vfh  00021_seg_cloud.pcd_vfh  00022_seg_cloud.pcd_vfh  00023_seg_cloud.pcd_vfh  00024_seg_cloud.pcd_vfh  00025_seg_cloud.pcd_vfh  00026_seg_cloud.pcd_vfh  00027_seg_cloud.pcd_vfh  00028_seg_cloud.pcd_vfh  00029_seg_cloud.pcd_vfh  00030_seg_cloud.pcd_vfh  00031_seg_cloud.pcd_vfh  00032_seg_cloud.pcd_vfh  00033_seg_cloud.pcd_vfh  00034_seg_cloud.pcd_vfh  00035_seg_cloud.pcd_vfh  00036_seg_cloud.pcd_vfh  00037_seg_cloud.pcd_vfh  00038_seg_cloud.pcd_vfh  00039_seg_cloud.pcd_vfh  (+31 more)
suturo_perception_svm_classification/vfh_data/D-Link-5_degrees/1/: 00000_seg_cloud.pcd_vfh  00001_seg_cloud.pcd_vfh  00002_seg_cloud.pcd_vfh  00003_seg_cloud.pcd_vfh  00004_seg_cloud.pcd_vfh  00005_seg_cloud.pcd_vfh  00006_seg_cloud.pcd_vfh  00007_seg_cloud.pcd_vfh  00008_seg_cloud.pcd_vfh  00009_seg_cloud.pcd_vfh  00010_seg_cloud.pcd_vfh  00011_seg_cloud.pcd_vfh  00012_seg_cloud.pcd_vfh  00013_seg_cloud.pcd_vfh  00014_seg_cloud.pcd_vfh  00015_seg_cloud.pcd_vfh  00016_seg_cloud.pcd_vfh  00017_seg_cloud.pcd_vfh  00018_seg_cloud.pcd_vfh  00019_seg_cloud.pcd_vfh  00020_seg_cloud.pcd_vfh  00021_seg_cloud.pcd_vfh  00022_seg_cloud.pcd_vfh  00023_seg_cloud.pcd_vfh  00024_seg_cloud.pcd_vfh  00025_seg_cloud.pcd_vfh  00026_seg_cloud.pcd_vfh  00027_seg_cloud.pcd_vfh  00028_seg_cloud.pcd_vfh  00029_seg_cloud.pcd_vfh  00030_seg_cloud.pcd_vfh  00031_seg_cloud.pcd_vfh  00032_seg_cloud.pcd_vfh  00033_seg_cloud.pcd_vfh  00034_seg_cloud.pcd_vfh  00035_seg_cloud.pcd_vfh  00036_seg_cloud.pcd_vfh  00037_seg_cloud.pcd_vfh  00038_seg_cloud.pcd_vfh  00039_seg_cloud.pcd_vfh  (+31 more)
suturo_perception_svm_classification/vfh_data/Kaffe-Filter-5_degrees/1/: 00000_seg_cloud.pcd_vfh  00001_seg_cloud.pcd_vfh  00002_seg_cloud.pcd_vfh  (+68 more)
(+529 files in other folders)
