cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl_correspondence)
set(PCL_DIR "/home/username/pcl-pcl-1.7.1/build/")
#find_package(PCL 1.7 REQUIRED COMPONENTS common io)
find_package(PCL 1.7 REQUIRED )
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(correspondence_grouping correspondence_grouping.cpp)
#target_link_libraries(correspondence_grouping ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
target_link_libraries(correspondence_grouping ${PCL_LIBRARIES})
