<package>
  <name>suturo_perception_cloud_fitter</name>
  <version>0.0.1</version>
  <description>
      Fit meshed to pointclouds using distance field fitting
  </description>
  <maintainer email="aluebken@cs.uni-bremen.de">Andre Lübken</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>suturo_perception_utils</build_depend>
  <build_depend>suturo_perception_lib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>suturo_perception_utils</run_depend>
  <run_depend>suturo_perception_lib</run_depend>
</package>
