<package>
  <name>suturo_perception_color_analysis</name>
  <version>0.0.1</version>
  <description>
      Color analysis on pointclouds.
      Calculation of average color in RGB and HSV of a pointcloud.
      Calculation and visualization of a hue histogram of a pointcloud.
  </description>
  <maintainer email="ofenrohr@cs.uni-bremen.de">Tom Vincent Peters</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>suturo_perception_utils</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>suturo_perception_utils</run_depend>
</package>
