<package>
  <name>suturo_perception_svm_classification</name>
  <version>0.0.1</version>
  <description>
    Classify data with support vector machines. Uses ml_classifiers
  </description>
  <maintainer email="ofenrohr@cs.uni-bremen.de">Tom Vincent Peters</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>suturo_perception_utils</build_depend>
  <build_depend>suturo_perception_lib</build_depend>
  <build_depend>suturo_perception_ml_classifiers_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>suturo_perception_utils</run_depend>
  <run_depend>suturo_perception_lib</run_depend>
  <run_depend>suturo_perception_ml_classifiers_msgs</run_depend>
</package>
